--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,4 +50,4 @@ markdown_extensions:
   - tables
 
 repo_name: Rainbox
-repo_url: https://github.com/yourusername/rainbox
+repo_url: https://github.com/Eoic/Rainbox
